2001-11-14  Ray Tomlinson  <RTomlinson@bbn.com>

	* SpecificInsertionRecipe.java: 
	* ComponentInsertionRecipe.java:
	Change default query to "recipeQuerySelectNothing"

2001-11-12  Ray Tomlinson  <RTomlinson@bbn.com>

	* SpecificInsertionRecipe.java:
	Use RecipeQueryProperty for properties instead of vanilla
	ConfigurableComponentProperty to get valid value checking based on
	available queries.

	* component-insertion-recipe-description.html:
	Help documentation.

	* component-insertion-help.html:
	Help documentation.

	* RecipeQueryProperty.java (Repository):
	New class overrides getAllowedValues based on the available
	querys.

	* ComponentInsertionRecipe.java:
	Use RecipeQueryProperty for properties instead of vanilla
	ConfigurableComponentProperty to get valid value checking based on
	available queries.

2001-11-09  Ray Tomlinson  <RTomlinson@bbn.com>

	* ComponentInsertionRecipe.java:
	Add comment describing how to use.

2001-11-07  Ray Tomlinson  <RTomlinson@bbn.com>

	* ComponentInsertionRecipe.java:
	Remove debug println

2001-11-06  Ray Tomlinson  <RTomlinson@bbn.com>

	* ComponentInsertionRecipe.java:
	New recipe component that inserts components based on the result
	of doing queries.
